// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abv ver adds the first version 1`] = `
Object {
  ".abv": Object {
    ".objects": Object {
      "<foo>.md": "# Foo
",
    },
    ".viewstack": "[]",
    "foo": "{
    \\"0\\": \\"<foo>.md\\",
    \\"counter\\": 1,
    \\"m$ts\\": {
        \\"0\\": \\"2020-07-20T18:36Z\\"
    },
    \\"m$prev\\": {},
    \\"head\\": [
        \\"ref\\",
        0
    ]
}",
  },
  "foo.md": "# Foo
",
}
`;

exports[`abv ver adds the second version 1`] = `
Object {
  ".abv": Object {
    ".objects": Object {
      "<foo>.md": "# Foo
",
    },
    ".viewstack": "[]",
    "foo": "{
    \\"0\\": \\"ver1.md\\",
    \\"1\\": \\"<foo>.md\\",
    \\"counter\\": 2,
    \\"head\\": [
        \\"ref\\",
        1
    ],
    \\"m$ts\\": {
        \\"1\\": \\"2020-07-20T18:36Z\\"
    },
    \\"m$prev\\": {
        \\"1\\": [
            \\"ref\\",
            0
        ]
    }
}",
  },
  "foo.md": "# Foo
",
}
`;
